--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,12 +17,17 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.9.6",
-    "nodemailer": "^6.10.0"
+    "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
+    "razorpay": "^2.9.6",
+    "short-unique-id": "^5.2.0",
+    "util": "^0.12.5"
   },
-    "devDependencies": {
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
