--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
