--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon api.js"
+    "dev": "NODE_ENV=development npx nodemon api.js",
+    "start": "NODE_ENV=production node api.js",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest  --watch"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +32,17 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
